--- a/lang/contexts.json
+++ b/lang/contexts.json
@@ -1,3 +1,3 @@
 {
-  "My plugin": "Content for a tooltip is displayed when a user hovers the CKEditor 5 icon."
+  "Source Editing CodeMirror": "CodeMirror syntax highlighting to source editing mode."
 }
